Fix CompressedClassPointerEncoding test